- fix bug z-index infor user

--- a/src/app/layout/package/package-list/package-list.component.scss
+++ b/src/app/layout/package/package-list/package-list.component.scss
@@ -356,7 +356,8 @@ a {
     width: 100%;
     //  min-width: calc(100% - 70px);
     background-color: #ffff;
-    z-index: 10000;
+    // z-index: 10000;
+    z-index: 100;
 }
 
 
